--- a/CarespotASP.Tests/App.config
+++ b/CarespotASP.Tests/App.config
@@ -4,11 +4,13 @@
     that apply only to the Test project.
 -->
 <configuration>
-    <appSettings>
+  <appSettings>
+  </appSettings>
 
-    </appSettings>
-
-    <connectionStrings>
-
-    </connectionStrings>
+  <connectionStrings>
+    <add
+         name="CarespotConnectionString"
+         connectionString="Data Source=WIN-SRV-WEB.fhict.local;Initial Catalog=Carespotasp;User ID=carespot;Password=Test1234;Encrypt=False;TrustServerCertificate=True"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
