--- a/CarespotASP/CarespotASP.csproj
+++ b/CarespotASP/CarespotASP.csproj
@@ -147,11 +147,14 @@
     <Compile Include="Controllers\RegistreerController.cs" />
     <Compile Include="Dal\Context\ChatSqlContext.cs" />
     <Compile Include="Dal\Context\GebruikerSqlContext.cs" />
+    <Compile Include="Dal\Context\HulpvraagSqlContext.cs" />
     <Compile Include="Dal\Env.cs" />
     <Compile Include="Dal\Interfaces\IChat.cs" />
     <Compile Include="Dal\Interfaces\IGebruiker.cs" />
+    <Compile Include="Dal\Interfaces\IHulpvraag.cs" />
     <Compile Include="Dal\Repositorys\ChatRepository.cs" />
     <Compile Include="Dal\Repositorys\GebruikerRepository.cs" />
+    <Compile Include="Dal\Repositorys\HulpvraagRepository.cs" />
     <Compile Include="Enums\Geslacht.cs" />
     <Compile Include="Enums\VervoerType.cs" />
     <Compile Include="Global.asax.cs">
