--- a/CarespotASP.Tests/CarespotASP.Tests.csproj
+++ b/CarespotASP.Tests/CarespotASP.Tests.csproj
@@ -92,13 +92,10 @@
     <Compile Include="TestBeheerder.cs" />
     <Compile Include="TestReview.cs" />
     <Compile Include="TestBeschikbaarheid.cs" />
-
     <Compile Include="TestReactie.cs" />
-
     <Compile Include="TestVrijwilliger.cs" />
     <Compile Include="TestHulpverlener.cs" />
-
-
+    <Compile Include="TestVaardigheid.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
