--- a/CarespotASP/Web.config
+++ b/CarespotASP/Web.config
@@ -59,6 +59,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
+    <clear />
     <add
          name="CarespotConnectionString"
          connectionString="Data Source=WIN-SRV-WEB.fhict.local;Initial Catalog=Carespotasp;User ID=carespot;Password=Test1234;Encrypt=False;TrustServerCertificate=True"
