--- a/CarespotASP/CarespotASP.csproj
+++ b/CarespotASP/CarespotASP.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Controllers\HulpbehoevendeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegistreerController.cs" />
+    <Compile Include="Controllers\VrijwilligerController.cs" />
     <Compile Include="Dal\Context\BeheerderSqlContext.cs" />
     <Compile Include="Dal\Context\BeschikbaarheidSqlContext.cs" />
     <Compile Include="Dal\Context\ChatSqlContext.cs" />
@@ -243,6 +244,7 @@
     <Content Include="Views\Hulpbehoevende\Opdrachten.cshtml" />
     <Content Include="Views\Gebruiker\NieuwGebruiker.cshtml" />
     <Content Include="Views\Beoordeling\NieuwBeoordeling.cshtml" />
+    <Content Include="Views\Vrijwilliger\Hoofdscherm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
