--- a/CarespotASP/CarespotASP.csproj
+++ b/CarespotASP/CarespotASP.csproj
@@ -147,6 +147,7 @@
     <Compile Include="Controllers\GebruikerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HulpbehoevendeController.cs" />
+    <Compile Include="Controllers\HulpverlenerController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\RegistreerController.cs" />
     <Compile Include="Controllers\VrijwilligerController.cs" />
@@ -260,6 +261,7 @@
     <Content Include="Views\Gebruiker\GegevensWijzigen.cshtml" />
     <Content Include="Views\Gebruiker\Details.cshtml" />
     <Content Include="Views\Registreer\RegistreerBeheerderHulpverlener.cshtml" />
+    <Content Include="Views\Hulpverlener\Hulpverlener.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
