--- a/CarespotASP/CarespotASP.csproj
+++ b/CarespotASP/CarespotASP.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Controllers\BeoordelingController.cs" />
     <Compile Include="Controllers\BeheerderController.cs" />
     <Compile Include="Controllers\ChatController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\GebruikerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\HulpbehoevendeController.cs" />
@@ -268,6 +269,7 @@
     <Content Include="Views\Vrijwilliger\Reageer.cshtml" />
     <Content Include="Views\Hulpverlener\Hulpverlener.cshtml" />
     <Content Include="Views\Hulpvraag\Details.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
