--- a/CarespotASP/CarespotASP.csproj
+++ b/CarespotASP/CarespotASP.csproj
@@ -214,6 +214,7 @@
     <Content Include="Content\beheerder.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Foto\warning.png" />
     <Content Include="Content\Scripts\Site.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -273,7 +274,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\Foto\" />
     <Folder Include="Content\VOG\" />
   </ItemGroup>
   <ItemGroup>
