--- a/CarespotASP/CarespotASP.csproj
+++ b/CarespotASP/CarespotASP.csproj
@@ -215,6 +215,7 @@
     <Content Include="Content\beheerder.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Foto\pexels-photo-91227.jpeg" />
     <Content Include="Content\Foto\warning.png" />
     <Content Include="Content\Scripts\Site.js" />
     <Content Include="favicon.ico" />
