--- a/CarespotASP/Web.config
+++ b/CarespotASP/Web.config
@@ -62,7 +62,7 @@
     <clear />
     <add
          name="CarespotConnectionString"
-         connectionString="Data Source=WIN-SRV-WEB.fhict.local;Initial Catalog=Carespotasp;User ID=carespot;Password=Test1234;Encrypt=False;TrustServerCertificate=True"
+         connectionString="Data Source=WIN-SRV-WEB.fhict.local;Initial Catalog=CarespotAsp2;User ID=carespot;Password=Test1234;Encrypt=False;TrustServerCertificate=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
