--- a/CarespotASP/CarespotASP.csproj
+++ b/CarespotASP/CarespotASP.csproj
@@ -280,6 +280,7 @@
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Registreer\RegistreerHulpverlener.cshtml" />
     <Content Include="Views\Error\AuthError.cshtml" />
+    <Content Include="Views\Chat\Beheer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
