--- a/CarespotASP/CarespotASP.csproj
+++ b/CarespotASP/CarespotASP.csproj
@@ -216,6 +216,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Foto\banner8.jpeg" />
+    <Content Include="Content\Foto\barcode1.png" />
     <Content Include="Content\Foto\product1.1.jpg" />
     <Content Include="Content\Foto\product2.jpeg" />
     <Content Include="Content\Foto\pexels-photo-91227.jpeg" />
